Kubernetes/yml-templates/deployment-rollout.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: firstdeploy-rollout
  labels:
    name: firstdeploy
  annotations:
    kubernetes.io/change-cause: "Version1"

spec:
    replicas: 5
    minReadySeconds: 10

    strategy:
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1

    selector:
      matchLabels:
        app: my-app
    template:
      metadata:
        name: dpod
        labels:
          app: my-app
      spec:
        containers:
          - name: container
          image: nginx
