Kubernetes/yml-templates/first-multicontainer.yml
apiVersion: v1
kind: Pod

metadata:
  name: myfirst-multi-pod
  labels:
    env: prod

spec:
  containers:
    - name: myfirstcontainer
      image: nginx
        # args: ["sleep","12"]
    - name: mysecondcontainer
      image: redis
