Kubernetes/yml-templates/firstcontainer.yml
apiVersion: v1
kind: Pod

metadata:
  name: myfirstpod
  labels:
    env: prod

spec:
  containers:
    - name: myfirstcontainer
      image: nginx
