Kubernetes/yml-templates/multiport-pod.yml
apiVersion: v1
kind: Pod

metadata:
  name: myfirstpodservice2
  labels:
    app: webserver-multiport
    podname: secondpodlb

spec:
  containers:
    - name: firstcontainer
      image: nginx
