Kubernetes/yml-templates/multiport-pod1.yml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-custom
  labels:
    app: webserver-multiport
    podname: secondpodlb

spec:
  containers:
    - name: firstcontainer
      image: coolgourav147/nginx-custom
