Kubernetes/yml-templates/cluster-ip-service.yml
apiVersion: v1
kind: Service

metadata:
  name: my-internal-service

spec:
  selector:
    app: secondpodlb

  ports:
    - name: http
      port: 80
      targetPort: 800
      protocol: TCP
