Kubernetes/yml-templates/network-policy-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
spec:
  podSelector: {} # Selects all pods but does not allow any ingress traffic to those pods.
  policyTypes:
  - Ingress
